--- a/style.css
+++ b/style.css
@@ -1,3 +1,170 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap');
+
 *{
-    background-color: black;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: 'Poppins', 'sans-serif';
+    width: 100%;
+    height: 100vh;
+    background-color: #121213;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header{
+    width: 85%;
+    height: 95%;
+    /* border: 1px solid #fff; */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.menu-side, .song-side{
+    width: 25%;
+    height: 90%;
+    /* border: 1px solid #fff; */
+    background-color: #111727;
+    box-shadow: 5px 0px 2px #090f1f;
+    color: #fff;
+}
+
+.song-side{
+    width: 75%;
+    background-color: #0b1320;
+}
+
+.master-play{
+    width: 100%;
+    height: 10%;
+    /* border: 1px solid #fff; */
+    background-color: #111727;
+    box-shadow: 0px 3px 8px #090f1f;
+}
+
+.menu-side h1{
+    font-size: 20px;
+    margin: 15px 0px 0px 20px;
+    font-weight: 500;
+}
+
+.menu-side .playlist{
+    margin: 40px 0px 0px 20px;
+}
+
+.menu-side .playlist h4{
+    font-size: 14px;
+    font-weight: 400;
+    padding-bottom: 10px;
+    color: #4c5262;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    transition: 0.3s linear;
+}
+
+.menu-side .playlist h4:hover{
+    color: #fff;
+}
+
+.menu-side .playlist h4 span{
+    position: relative;
+    margin-right: 35px;
+}
+
+.menu-side .playlist h4 span::before{
+    content: '';
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    border: 2px solid #4c5262;
+    border-radius: 50%;
+    top: -4px;
+    transition: 0.3s linear;
+}
+
+.menu-side .playlist h4:hover span::before{
+    border: 2px solid #fff;
+}
+
+.menu-side .playlist h4 .bi{
+    display: none;
+}
+
+.menu-side .playlist .active{
+    color: #36e2ec;
+}
+ 
+.menu-side .playlist .active span{
+    display: none;
+}
+
+.menu-side .playlist .active .bi{
+    display: flex;
+    margin-right: 20px;
+}
+
+.menu-side .menu-song{
+    width: 100%;
+    height: 420px;
+    /* border: 1px solid #fff; */
+    margin-top: 40px;
+    overflow: auto;
+}
+
+.menu-side .menu-song::-webkit-scrollbar{
+    display: none;
+}
+
+.menu-side .menu-song li{
+    list-style-type: none;
+    position: relative;
+    padding: 5px 0px 5px 20px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    cursor: pointer;
+    transition: 0.3s linear;
+}
+
+.menu-side .menu-song li:hover{
+    background-color: rgb(105, 105, 105, 0.1);
+}
+
+.menu-side .menu-song li span{
+    font-size: 12px;
+    font-weight: 600;
+    color: #4c5262;
+}
+
+
+.menu-side .menu-song li img{
+    width: 32px;
+    height: 32px;
+    margin-left: 25px;
+}
+
+.menu-side .menu-song li h5{
+    font-size: 11px;
+    margin-left: 15px;
+    width: 170px;
+    border: 1px solid #fff;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.menu-side .menu-song li h5 .subtitle{
+    font-size: 9px;
+    color: #4c5262;
+}
+
+.menu-side .menu-song li h5 .bi{
+    position: absolute;
+    right: 15px;
+    
 }
