--- a/style.css
+++ b/style.css
@@ -152,19 +152,264 @@ header{
     font-size: 11px;
     margin-left: 15px;
     width: 170px;
-    border: 1px solid #fff;
+    /* border: 1px solid #fff; */
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
-.menu-side .menu-song li h5 .subtitle{
+.menu-side .menu-song li h5 .artist{
     font-size: 9px;
     color: #4c5262;
 }
 
-.menu-side .menu-song li h5 .bi{
+.menu-side .menu-song li .bi{
     position: absolute;
     right: 15px;
-    
+}
+
+.master-play{
+    display: flex;
+    align-items: center;
+    padding: 0px 20px;
+}
+
+.master-play .wave{
+    width: 30px;
+    height: 30px;
+    /* border: 1px solid #fff; */
+    padding-bottom: 5px;
+    display: flex;
+    align-items: flex-end;
+    margin-right: 10px;
+}
+
+.master-play .wave .wave1{
+    width: 3px;
+    height: 10px;
+    background-color: #36e2ec;
+    margin-right: 3px;
+    border-radius: 10px 10px 0px 0px;
+    animation: unset;
+}
+
+.master-play .wave .wave1:nth-child(2){
+    height: 13px;
+    margin-right: 3.5px;
+    animation-delay: 0.4s;
+}
+
+.master-play .wave .wave1:nth-child(3){
+    height: 8px;
+    animation-delay: 0.8s;
+}
+
+/* JavaScript classes */
+
+.master-play .active1 .wave1{
+    animation: wave 0.5s linear infinite;
+}
+
+.master-play .active1 .wave1:nth-child(2){
+    animation-delay: 0.4s;
+}
+
+.master-play .active1 .wave1:nth-child(3){
+    animation-delay: 0.8s;
+}
+
+
+@keyframes wave {
+    0%{
+        height: 10px;
+    }
+    50%{
+        height: 15px;
+    }
+    100%{
+        height: 10px;
+    }
+}
+
+.master-play img{
+    width: 35px;
+    height: 35px;
+}
+
+.master-play h5{
+    width: 130px;
+    /* border: 1px solid #fff; */
+    margin-left: 15px;
+    color: #fff;
+    line-height: 17px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 13px;
+}
+
+.master-play h5 .artist{
+    font-size: 11px;
+    color: #4c5262;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.master-play .icon{
+    font-size: 20px;
+    color: #fff;
+    margin: 0px 20px 0px 40px;
+    outline: none;
+    display: flex;
+    align-items: center;
+}
+
+.master-play .icon .bi{
+    cursor: pointer;
+    outline: none;
+}
+
+.master-play .icon .shuffle{
+    font-size: 17px;
+    margin-right: 10px;
+    width: 17.5px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+}
+
+.master-play .icon #download-music{
+    font-size: 20px;
+    margin-left: 10px;
+
+}
+
+.master-play .icon .bi:nth-child(3){
+    border: 1px solid rgb(105, 105, 105, 0.1);
+    border-radius: 50%;
+    padding: 1px 5px 0px 7px;
+    margin: 0px 5px;
+}
+
+.master-play span{
+    color: #fff;
+    width: 32px;
+    /* border: 1px solid #fff; */
+    font-size: 11px;
+    font-weight: 400;
+}
+
+.master-play #currentStart{
+    margin: 0px 0px 0px 20px;
+}
+
+.master-play .bar{
+    position: relative;
+    width: 43%;
+    height: 2px;
+    background-color: rgb(105, 105, 170, 0.1);
+    margin: 0px 15px 0px 10px;
+}
+
+.master-play .bar .bar2{
+    position: absolute;
+    background-color: #36e2ec;
+    width: 50%;
+    height: 100%;
+    top: 0;
+    transition: 1s linear;
+}
+
+.master-play .bar .dot{
+    position: absolute;
+    width: 5px ;
+    height: 5px;
+    background-color: #36e2ec;
+    border-radius: 50%;
+    left: 0%;
+    top: -1.5px;
+    transition: 1s linear;
+}
+
+.master-play .bar .dot::before{
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border: 1px solid #36e2ec;
+    border-radius: 50%;
+    left: -7px;
+    top: -6.5px;
+    box-shadow: inset 0px 0px 3px #36e2ec;
+}
+
+.master-play .bar input{
+    position: absolute;
+    width: 100%;
+    top: -7px;
+    left: 0px;
+    cursor: pointer;
+    z-index: 99;
+    transition: 3s linear;
+    opacity: 0;
+}
+
+.master-play .vol{
+    position: relative;
+    width: 100px;
+    height: 2px;
+    background-color: rgb(105, 105, 170, 0.1);
+    margin-left: 50px;
+}
+
+.master-play .vol .bi{
+    position: absolute;
+    color: #fff;
+    font-size: 25px;
+    top: -17px;
+    left: -30px;
+}
+
+.master-play .vol input{
+    position: absolute;
+    width: 100%;
+    top: -6px;
+    left: 0;
+    cursor: pointer;
+    z-index: 99;
+    opacity: 0;
+}
+
+.master-play .vol .vol-bar{
+    position: absolute;
+    background-color: #36e2ec;
+    width: 50%;
+    height: 100%;
+    top: 0;
+    transition: 1s linear;
+}
+
+.master-play .vol .dot{
+    position: absolute;
+    width: 5px ;
+    height: 5px;
+    background-color: #36e2ec;
+    border-radius: 50%;
+    left: 0%;
+    top: -1.5px;
+    transition: 1s linear;
+}
+
+.master-play .vol .dot::before{
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border: 1px solid #36e2ec;
+    border-radius: 50%;
+    left: -7px;
+    top: -6.5px;
+    box-shadow: inset 0px 0px 3px #36e2ec;
 }
