--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ header{
     /* border: 1px solid #fff; */
     display: flex;
     flex-wrap: wrap;
+    overflow: hidden;
+    position: relative;
 }
 
 .menu-side, .song-side{
@@ -412,4 +414,108 @@ header{
     left: -7px;
     top: -6.5px;
     box-shadow: inset 0px 0px 3px #36e2ec;
+}
+
+header .song-side{
+    z-index: 2;
+}
+
+header .song-side::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 300px;
+    background: url('./img/bg.png');
+    z-index: -1;
+}
+
+.song-side nav{
+    width: 90%;
+    height: 10%;
+    /* border: 1px solid #fff; */
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.song-side nav ul{
+    display: flex;
+}
+
+.song-side nav ul li{
+    list-style-type: none;
+    position: relative;
+    font-size: 13px;
+    color: #4c5262;
+    margin-right: 25px;
+    cursor: pointer;
+    transition: 0.3s linear;
+}
+
+.song-side nav ul li:hover{
+    color: #fff;
+}
+
+.song-side nav ul li:nth-child(1){
+    color: #fff;
+}
+
+.song-side nav ul li span{
+    position: absolute;
+    width: 100%;
+    height: 2.5px;
+    background-color: #36e2ec;
+    bottom: -5px;
+    left: 0;
+    border-radius: 20px;
+}
+
+.song-side nav .search{
+    position: relative;
+    width: 40%;
+    padding: 1px 10px;
+    border-radius: 20px;
+    /* border: 1px solid #fff; */
+    color: gray;
+}
+
+.song-side nav .search::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(184, 184, 184, 0.1);
+    border-radius: 20px;
+    backdrop-filter: blur(5px);
+    z-index: -1;
+}
+
+.song-side nav .search .bi{
+    font-size: 13px;
+    padding: 3px 0px 0px 10px;
+}
+
+.song-side nav .search input{
+    background: none;
+    border: none;
+    outline: none;
+    padding: 0px 10px;
+    color: #fff;
+    font-size: 12px;
+}
+
+.song-side nav .user{
+    position: relative;;
+    width: 30px;
+    height: 30px;
+    /* border: 1px solid #fff; */
+    border-radius: 50%;
+}
+
+.song-side nav .user img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    box-shadow: 2px 2px 8px #121213;
 }
