--- a/style.css
+++ b/style.css
@@ -283,6 +283,8 @@ header{
 }
 
 .master_play .icon #download_music{
+    text-decoration: none;
+    color: #fff;
     font-size: 20px;
     margin-left: 10px;
 
@@ -491,6 +493,55 @@ header .song_side::before{
     z-index: -1;
 }
 
+.song_side nav .search .search_results{
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    /* border: 1px solid #fff; */
+    margin-top: 10px;
+    border-radius: 10px;
+    overflow: auto;
+}
+
+.song_side nav .search .search_results::-webkit-scrollbar{
+    display: none;
+}
+
+.song_side nav .search .search_results .card{
+    min-width: 100%;
+    height: 45px;
+    /* border: 1px solid #fff; */
+    display: flex;
+    align-items: center;
+    background-color: rgb(184, 184, 184, 0.1);
+    margin-bottom: 5px;
+    text-decoration: none;
+    display: none;
+}
+
+.song_side nav .search .search_results .card img{
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+}
+
+.song_side nav .search .search_results .card .content{
+    width: 80%;
+    height: 100%;
+    /* border: 1px solid #fff; */
+    padding: 0;
+    font-size: 13px;
+    font-weight: 600;
+    color: #fff;
+    padding-top: 3.5px;
+}
+
+.song_side nav .search .search_results .card .artist{
+    font-size: 11px;
+    font-weight: 500;
+    color: #a4a8b4;
+}
+
 .song_side nav .search .bi{
     font-size: 13px;
     padding: 3px 0px 0px 10px;
@@ -610,7 +661,7 @@ header .song_side::before{
 }
 
 .song_side .popular_song .pop_song li{
-    min-width: 100px;
+    min-width: 101px;
     height: 140px;
     list-style-type: none;
     margin-right: 10px;
